# nifti-io-project

./: .gitignore  CMakeLists.txt  README.md  compare_voxels.py  niftiImageGen.py
src/: imgNIFTI.cpp  imgNIFTI.h  main.cpp  testImgGen.cpp
